doc/ug: chapters rearranged

--- a/doc/src/users-guide/ch-lifecycle.tex
+++ b/doc/src/users-guide/ch-lifecycle.tex
@@ -1,11 +1,13 @@
-\chapter{Modeling Node Failure and Other Dynamic Scenarios}
+\chapter{Modeling Node Failures}
 \label{cha:lifecycle}
 
 TODO:
 
 lifecycle modeling
 
-scripting
+NodeStatus 
+
+mention scripting
  
 
 
