--- a/doc/src/users-guide/ch-network-autoconfig.tex
+++ b/doc/src/users-guide/ch-network-autoconfig.tex
@@ -1,11 +1,11 @@
-% based on 'integration' branch: 446a1265c28822456bc0230d362bbabdee7778ba (2012-03-19)
-
-\chapter{Configuring IPv4 networks}
-\label{cha:ipv4-config}
+\chapter{Network Autoconfiguration}
+\label{cha:network-autoconfiguration}
 
 \section{Overview}
 
 TODO: this describes static autoconfiguration of IPv4 networks
+
+TODO: also document L2Configurator
 
 An IPv4 network is composed of several nodes like hosts, routers,
 switches, hubs, Ethernet buses, or wireless access points.
