--- a/doc/src/users-guide/ch-transport.tex
+++ b/doc/src/users-guide/ch-transport.tex
@@ -1,5 +1,5 @@
-\chapter{Transport Protocols: TCP, UDP, SCTP}
-\label{cha:tcp}
+\chapter{Transport Protocols}
+\label{cha:transport-protocols}
 
 \section{TCP}
 \label{sec:tcp}
