--- a/doc/src/users-guide/inet-users-guide.tex
+++ b/doc/src/users-guide/inet-users-guide.tex
@@ -427,40 +427,16 @@
 \include{ch-network-interfaces}
 \cleardoublepage
 
-\include{ch-ppp}
+\include{ch-apps}
 \cleardoublepage
 
-\include{ch-ethernet}
-\cleardoublepage
-
-\include{ch-environment}
-\cleardoublepage
-
-\include{ch-power}
-\cleardoublepage
-
-\include{ch-physicallayer}
-\cleardoublepage
-
-\include{ch-80211}
-\cleardoublepage
-
-\include{ch-sensor-macs}
-\cleardoublepage
-
-\include{ch-mobility}
+\include{ch-transport}
 \cleardoublepage
 
 \include{ch-ipv4}
 \cleardoublepage
 
-\include{ch-ipv4-config}
-\cleardoublepage
-
 \include{ch-ipv6}
-\cleardoublepage
-
-\include{ch-transport}
 \cleardoublepage
 
 \include{ch-routing}
@@ -475,16 +451,52 @@
 \include{ch-mpls}
 \cleardoublepage
 
-\include{ch-apps}
+\include{ch-ppp}
 \cleardoublepage
 
-\include{ch-visualization}
+\include{ch-ethernet}
+\cleardoublepage
+
+\include{ch-80211}
+\cleardoublepage
+
+\include{ch-802154}
+\cleardoublepage
+
+\include{ch-sensor-macs}
+\cleardoublepage
+
+\include{ch-physicallayer}
+\cleardoublepage
+
+\include{ch-transmission-medium}
+\cleardoublepage
+
+\include{ch-environment}
+\cleardoublepage
+
+\include{ch-mobility}
+\cleardoublepage
+
+\include{ch-power}
+\cleardoublepage
+
+\include{ch-emulation}
+\cleardoublepage
+
+\include{ch-network-autoconfig}
 \cleardoublepage
 
 \include{ch-lifecycle}
 \cleardoublepage
 
-\include{ch-emulation}
+\include{ch-scenario-management}
+\cleardoublepage
+
+\include{ch-collecting-results}
+\cleardoublepage
+
+\include{ch-visualization}
 \cleardoublepage
 
 \include{ch-authors-guide}
