doc/ug: draft chapters marked as such

--- a/doc/src/users-guide/ch-802154.tex
+++ b/doc/src/users-guide/ch-802154.tex
@@ -1,9 +1,13 @@
+\ifdraft
+
 \chapter{The 802.15.4 Model}
 \label{cha:802154}
 
 \section{Overview}
 
 TODO
+
+\enddraft
 
 %%% Local Variables:
 %%% mode: latex
