--- a/doc/src/users-guide/ch-collecting-results.tex
+++ b/doc/src/users-guide/ch-collecting-results.tex
@@ -1,3 +1,5 @@
+\ifdraft
+
 \chapter{Collecting Results}
 \label{cha:collecting-results}
 
@@ -21,6 +23,7 @@ RoutingTableRecorder
 
 mention
 
+\enddraft
 
 %%% Local Variables:
 %%% mode: latex
