--- a/doc/src/users-guide/ch-emulation.tex
+++ b/doc/src/users-guide/ch-emulation.tex
@@ -1,3 +1,5 @@
+\ifdraft
+
 \chapter{Network Emulation}
 \label{cha:emulation}
 
@@ -10,6 +12,8 @@ TODO
 \section{Recording Packet Traces}
 
 TODO
+
+\enddraft
 
 %%% Local Variables:
 %%% mode: latex
