--- a/doc/src/users-guide/ch-lifecycle.tex
+++ b/doc/src/users-guide/ch-lifecycle.tex
@@ -1,3 +1,5 @@
+\ifdraft
+
 \chapter{Modeling Node Failures}
 \label{cha:lifecycle}
 
@@ -9,7 +11,7 @@ NodeStatus
 
 mention scripting
  
-
+\enddraft
 
 %%% Local Variables:
 %%% mode: latex
