--- a/doc/src/users-guide/ch-mpls.tex
+++ b/doc/src/users-guide/ch-mpls.tex
@@ -1,3 +1,5 @@
+\ifdraft
+
 \chapter{The MPLS Models}
 \label{cha:mpls}
 
@@ -139,9 +141,9 @@ hop types are 0. The route defined is 10.0.0.1 -> 1.0.0.1 ->
 </traffic>
 \end{verbatim}
 
+\enddraft
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "usman"
 %%% End:
-
-
