--- a/doc/src/users-guide/inet-users-guide.tex
+++ b/doc/src/users-guide/inet-users-guide.tex
@@ -13,6 +13,7 @@
 %%\usepackage{chancery}
 
 \usepackage[T1]{fontenc}
+\usepackage[11pt]{moresize}
 \usepackage{setspace}
 \usepackage{ifpdf}
 \usepackage{makeidx}
