doc/dg: Moved code fragments under lib folder to be able to compile.

--- a/doc/src/developers-guide/inet-developers-guide.tex
+++ b/doc/src/developers-guide/inet-developers-guide.tex
@@ -257,15 +257,15 @@
 
 % add caption={#2} to display caption
 \newcommand{\xmlsnippet}[2]{%
-    \lstinputlisting[language=XML,rulecolor=\color{XMLRulerColor},linerange=<!\-\-#1\-\->-<!\-\-End\-\->,includerangemarker=false,firstnumber=0]{Snippets.xml}}
+    \lstinputlisting[language=XML,rulecolor=\color{XMLRulerColor},linerange=<!\-\-#1\-\->-<!\-\-End\-\->,includerangemarker=false,firstnumber=0]{lib/Snippets.xml}}
 \newcommand{\cppsnippet}[2]{%
-    \lstinputlisting[language=C++,rulecolor=\color{CPPRulerColor},linerange=//!#1-//!End,includerangemarker=false,firstnumber=0]{Snippets.cc}}
+    \lstinputlisting[language=C++,rulecolor=\color{CPPRulerColor},linerange=//!#1-//!End,includerangemarker=false,firstnumber=0]{lib/Snippets.cc}}
 \newcommand{\msgsnippet}[2]{%
-    \lstinputlisting[language=msg,rulecolor=\color{MSGRulerColor},linerange=//!#1-//!End,includerangemarker=false,firstnumber=0]{Snippets.msg}}
+    \lstinputlisting[language=msg,rulecolor=\color{MSGRulerColor},linerange=//!#1-//!End,includerangemarker=false,firstnumber=0]{lib/Snippets.msg}}
 \newcommand{\nedsnippet}[2]{%
-    \lstinputlisting[language=ned,rulecolor=\color{NEDRulerColor},linerange=//!#1-//!End,includerangemarker=false,firstnumber=0]{Snippets.ned}}
+    \lstinputlisting[language=ned,rulecolor=\color{NEDRulerColor},linerange=//!#1-//!End,includerangemarker=false,firstnumber=0]{lib/Snippets.ned}}
 \newcommand{\inisnippet}[2]{%
-    \lstinputlisting[language=inifile,rulecolor=\color{IniRulerColor},linerange=\#!#1-\#!End,includerangemarker=false,firstnumber=0]{Snippets.ini}}
+    \lstinputlisting[language=inifile,rulecolor=\color{IniRulerColor},linerange=\#!#1-\#!End,includerangemarker=false,firstnumber=0]{lib/Snippets.ini}}
 
 %%
 %% some customization
