doc/ug: ch-usage: mention project features

--- a/doc/src/users-guide/ch-usage.tex
+++ b/doc/src/users-guide/ch-usage.tex
@@ -73,6 +73,13 @@ The OMNeT++ NED language uses hierarchical packages names. Packages correspond
 to directories under \ttt{src/}, so e.g. the \ttt{src/inet/transportlayer/tcp}
 directory corresponds to the \ttt{inet.transportlayer.tcp} NED package.
 
+For modularity, the INET Framework has about 80 \textit{project features}
+(parts of the codebase that can be disabled as a unit) defined. Not all project
+features are enabled in the default setup after installation. You can review
+the list of available project features in the \emph{Project | Project Features...} 
+dialog in the IDE. If you want to know more about project features, refer to the
+\emph{OMNeT++ User Guide}.
+
 \section{Getting Help}
 
 Examples and practical guidance:
