doc/dg: Marked empty chapters and not yet verified chapters as draft.
The reason is that we want to leave them out from the final version.

--- a/doc/src/developers-guide/ch-cross-layer-communication.tex
+++ b/doc/src/developers-guide/ch-cross-layer-communication.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{Cross-Layer Communication}
 \label{cha:cross-layer-communication}
 
@@ -35,6 +37,7 @@ TODO
 
 TODO list the tag names understood, by laters!
 
+\fi
 
 
 %%% Local Variables:
