--- a/doc/src/developers-guide/ch-developing-models.tex
+++ b/doc/src/developers-guide/ch-developing-models.tex
@@ -17,6 +17,7 @@ simultaneously. In order to spare the applications from using the default
 OMNeT++ message passing style between modules, INET provides an easy to use
 C++ socket API.
 
+\ifdraft TODO
 \section{NED Conventions}
 
 TODO conventions for NED module definitions
@@ -130,6 +131,7 @@ simple PPP
         inout phys @labels(PPPFrame);
 }
 \end{ned}
+\fi
 
 \section{Module Initialization}
 
@@ -168,6 +170,7 @@ method) that corresponds to the all-zeros address.
     to access the value.
 \end{itemize}
 
+\ifdraft TODO
 \subsection{Resolving Addresses}
 
 explain what kind of addresses INET provides for protocols to use: network
@@ -178,14 +181,15 @@ address lookup by name
 node lookup by MAC address
 
 node lookup by L3 address
+\fi
 
-
+\ifdraft TODO
 \section{Starting and Stopping Nodes}
 
 explain how INET supports network node lifecycle management: startup, shutdown, crash, etc.
 
 \cppsnippet{LifecycleOperationExample}{Lifecycle operation example}
-
+\fi
 
 \section{Working with Packets}
 
