--- a/doc/src/developers-guide/ch-environment.tex
+++ b/doc/src/developers-guide/ch-environment.tex
@@ -1,7 +1,12 @@
+\ifdraft TODO
+
 \chapter{The Physical Environment}
 \label{cha:environment}
 
 TODO C++ interface
+
+\fi
+
 
 %%% Local Variables:
 %%% mode: latex
