--- a/doc/src/developers-guide/ch-ethernet.tex
+++ b/doc/src/developers-guide/ch-ethernet.tex
@@ -1,4 +1,5 @@
-% last synchronized to 'dbc28949bf4332ac86d84b95705fbea9af4f84f7'
+\ifdraft TODO
+
 \chapter{The Ethernet Model}
 \label{cha:ethernet}
 
@@ -119,6 +120,9 @@ have to connect to different ports of \nedtype{EtherLlc}.
 
 The ETHERCTRL\_REGISTER\_DSAP/IEEE802CTRL\_DEREGISTER\_DSAP commands use only the
 dsap field in the \cppclass{Ieee802Ctrl} structure.
+
+\fi
+
 
 %%% Local Variables:
 %%% mode: latex
