--- a/doc/src/developers-guide/ch-ipv4.tex
+++ b/doc/src/developers-guide/ch-ipv4.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{Ipv4}
 \label{cha:ipv4}
 
@@ -403,6 +405,8 @@ The \cppclass{Ipv4ControlInfo} also copied from the \msgtype{ICMPMessage}
 to the application message.
 
 % FIXME ICMP TIMESTAMP requests are processed as ECHO requests
+
+\fi
 
 
 %%% Local Variables:
