--- a/doc/src/developers-guide/ch-ipv6.tex
+++ b/doc/src/developers-guide/ch-ipv6.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{IPv6 and Mobile IPv6}
 \label{cha:ipv6}
 
@@ -6,6 +8,9 @@ TODO how to send and receive
 TODO C++ interfaces among members of the protocol family 
 
 TODO how to extend
+
+\fi
+
 
 %%% Local Variables:
 %%% mode: latex
