--- a/doc/src/developers-guide/ch-mobility.tex
+++ b/doc/src/developers-guide/ch-mobility.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{Node Mobility}
 \label{cha:mobility}
 
@@ -71,6 +73,9 @@ When the target position reached, it chooses a new target.
 %       e.g. every second step in RandomWPMobility)
 % TODO Consider an updateInterval computed from an updateDistance and speed, because position change
 %      may be irrevelant during a preconfigured updateInterval.
+
+\fi
+
 
 %%% Local Variables:
 %%% mode: latex
