--- a/doc/src/developers-guide/ch-mpls.tex
+++ b/doc/src/developers-guide/ch-mpls.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{The MPLS Models}
 \label{cha:mpls}
 
@@ -194,6 +196,9 @@ In which:
   \item S (big S): a set of vertices whose final shortest path from s have already been determined
   \item Q: set of remaining vertices, Q union S = V
 \end{itemize}
+
+\fi
+
 
 %%% Local Variables:
 %%% mode: latex
