--- a/doc/src/developers-guide/ch-network-interfaces.tex
+++ b/doc/src/developers-guide/ch-network-interfaces.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{Network Interafces}
 \label{cha:network-interfaces}
 
@@ -185,6 +187,8 @@ categories in the host's \nedtype{NotificationBoard}:
 In all those notifications, the data field is a pointer to the
 corresponding \cppclass{InterfaceEntry} object. This is even true for
 \ttt{NF\_INTERFACE\_DELETED} (which is actually a pre-delete notification).
+\fi
+
 \fi
 
 
