--- a/doc/src/developers-guide/ch-packets.tex
+++ b/doc/src/developers-guide/ch-packets.tex
@@ -136,9 +136,10 @@ headers and trailers are popped during processing.
 
 \cppsnippet{PacketProcessingExample}{Packet processing example}
 
+\ifdraft TODO
 \section{Representing Network Signals}
 
-TODO
+\fi
 
 \cppsnippet{SignalConstructionExample}{Signal construction example}
 
@@ -195,9 +196,11 @@ packets with meta information
 
 \cppsnippet{PacketPrintingExample}{Packet printing example}
 
+\ifdraft TODO
 \section{Recording PCAP}
 
 TODO recorded into a PCAP file for further processing with 3rd party tools
+\fi
 
 %%%% Local Variables:
 %%% mode: latex
