--- a/doc/src/developers-guide/ch-physicallayer.tex
+++ b/doc/src/developers-guide/ch-physicallayer.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{The Physical Layer}
 \label{cha:physicallayer}
 
@@ -34,6 +36,8 @@ TODO: acoustic underwater example
 TODO: wireless vs. wired medium
 
 \end{verbatim}
+
+\fi
 
 
 %%% Local Variables:
