--- a/doc/src/developers-guide/ch-ppp.tex
+++ b/doc/src/developers-guide/ch-ppp.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{Point-to-Point Links}
 \label{cha:ppp}
 
@@ -27,6 +29,7 @@ Notifications are sent when
 transmission of a new PPP frame started (\verb!NF_PP_TX_BEGIN!), finished
 (\verb!NF_PP_TX_END!) or when a PPP frame received (\verb!NF_PP_RX_END!).
 
+\fi
 
 
 %%% Local Variables:
