--- a/doc/src/developers-guide/ch-sockets.tex
+++ b/doc/src/developers-guide/ch-sockets.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{Socket API}
 \label{cha:sockets}
 
@@ -20,6 +22,9 @@ TODO
 \section{Configuring Sockets}
 
 TODO
+
+\fi
+
 
 %%%% Local Variables:
 %%% mode: latex
