--- a/doc/src/developers-guide/ch-tcp.tex
+++ b/doc/src/developers-guide/ch-tcp.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{The TCP Models}
 \label{cha:tcp}
 
@@ -614,6 +616,9 @@ dispatch to socketEstablished(), socketDataArrived(), socketPeerClosed()
 or socketFailure()
 socket->processMessage(msg);
 \end{cpp}
+
+\fi
+
 
 %%% Local Variables:
 %%% mode: latex
