--- a/doc/src/developers-guide/ch-usage.tex
+++ b/doc/src/developers-guide/ch-usage.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{Getting Started}
 \label{cha:gettingstarted}
 
@@ -32,6 +34,7 @@ Set up version control (git, GitHub).
 
 Develop.
 
+\fi
 
 
 %%% Local Variables:
