--- a/doc/src/developers-guide/ch-80211.tex
+++ b/doc/src/developers-guide/ch-80211.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{The 802.11 Model}
 \label{cha:80211}
 
@@ -9,6 +11,9 @@ TODO tags, etc.
 \section{Architecture of the 802.11 MAC Model}
 
 TODO
+
+\fi
+
 
 %%% Local Variables:
 %%% mode: latex
