--- a/doc/src/developers-guide/ch-diffserv.tex
+++ b/doc/src/developers-guide/ch-diffserv.tex
@@ -1,7 +1,12 @@
+\ifdraft TODO
+
 \chapter{Differentiated Services}
 \label{cha:diffserv}
 
 TODO communication between components
+
+\fi
+
 
 %%% Local Variables:
 %%% mode: latex
