--- a/doc/src/developers-guide/ch-netfilter.tex
+++ b/doc/src/developers-guide/ch-netfilter.tex
@@ -1,9 +1,14 @@
+\ifdraft TODO
+
 \chapter{The Netfilter API}
 \label{cha:netfilter-api}
 
 \section{Overview}
 
 TODO
+
+\fi
+
 
 %%%% Local Variables:
 %%% mode: latex
