--- a/doc/src/developers-guide/ch-power.tex
+++ b/doc/src/developers-guide/ch-power.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{The Power Model}
 \label{cha:power}
 
@@ -14,6 +16,9 @@ TODO C++ interface
 \section{Energy Storage Models}
 
 TODO C++ interface
+
+\fi
+
 
 %%% Local Variables:
 %%% mode: latex
