--- a/doc/src/developers-guide/ch-udp.tex
+++ b/doc/src/developers-guide/ch-udp.tex
@@ -1,3 +1,5 @@
+\ifdraft TODO
+
 \chapter{The UDP Model}
 \label{cha:udp}
 
@@ -175,3 +177,11 @@ void MyApp::handleMessage(cMessage *msg)
     }
 }
 \end{cpp}
+
+\fi
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "usman"
+%%% End:
