doc/dg: Switched to final version by default.

--- a/doc/src/developers-guide/inet-developers-guide.tex
+++ b/doc/src/developers-guide/inet-developers-guide.tex
@@ -114,8 +114,8 @@
 %% Draft conditional to include unfinished parts
 %%
 \newif\ifdraft
-%\draftfalse %% uncomment for final version
-\drafttrue %% uncomment for draft version
+\draftfalse %% uncomment for final version
+%\drafttrue %% uncomment for draft version
 
 %%
 %% Generate Index
