doc/dg: Commented out TODO lines.

--- a/doc/src/developers-guide/ch-developing-models.tex
+++ b/doc/src/developers-guide/ch-developing-models.tex
@@ -20,7 +20,7 @@ C++ socket API.
 \ifdraft TODO
 \section{NED Conventions}
 
-TODO conventions for NED module definitions
+%TODO conventions for NED module definitions
 
 \subsection{The @node Property}
 
@@ -135,7 +135,7 @@ simple PPP
 
 \section{Module Initialization}
 
-explain how INET supports multi-stage interdependent module initialization
+%TODO explain how INET supports multi-stage interdependent module initialization
 
 \cppsnippet{ModuleInitializationExample}{Module initialization example}
 
@@ -186,7 +186,7 @@ node lookup by L3 address
 \ifdraft TODO
 \section{Starting and Stopping Nodes}
 
-explain how INET supports network node lifecycle management: startup, shutdown, crash, etc.
+%TODO explain how INET supports network node lifecycle management: startup, shutdown, crash, etc.
 
 \cppsnippet{LifecycleOperationExample}{Lifecycle operation example}
 \fi
@@ -195,7 +195,7 @@ explain how INET supports network node lifecycle management: startup, shutdown, 
 
 \subsection{Encapsulating Packets}
 
-TODO explain how INET packet representation supports encapsulation of packets, provide examples, etc.
+%TODO explain how INET packet representation supports encapsulation of packets, provide examples, etc.
 
 \cppsnippet{PacketEncapsulationExample}{Packet encapsulation example}
 
@@ -203,7 +203,7 @@ TODO explain how INET packet representation supports encapsulation of packets, p
 
 \subsection{Fragmenting Packets}
 
-explain how INET packet representation supports fragmentation of packets, provide examples, etc.
+%TODO explain how INET packet representation supports fragmentation of packets, provide examples, etc.
 
 \cppsnippet{PacketFragmentationExample}{Packet fragmentation example}
 
@@ -211,7 +211,7 @@ explain how INET packet representation supports fragmentation of packets, provid
 
 \subsection{Aggregating Packets}
 
-explain how INET packet representation supports aggregation of packets, provide examples, etc.
+%TODO explain how INET packet representation supports aggregation of packets, provide examples, etc.
 
 \cppsnippet{PacketAggregationExample}{Packet aggregation example}
 
@@ -219,7 +219,7 @@ explain how INET packet representation supports aggregation of packets, provide 
 
 \subsection{Serializing Packets}
 
-explain how INET packet representation provides supports for serialization, provide examples, etc.
+%TODO explain how INET packet representation provides supports for serialization, provide examples, etc.
 
 \cppsnippet{PacketSerializationExample}{Packet serialization example}
 
@@ -228,7 +228,7 @@ explain how INET packet representation provides supports for serialization, prov
 
 \subsection{Emulation Support}
 
-explain how INET packet representation provides supports for emulation, provide examples, etc.
+%TODO explain how INET packet representation provides supports for emulation, provide examples, etc.
 
 \cppsnippet{EmulationPacketSendingExample}{Emulation packet sending example}
 
@@ -236,30 +236,30 @@ explain how INET packet representation provides supports for emulation, provide 
 
 \subsection{Queueing Packets}
 
-explain how INET supports queueing packet data arriving in order
+%TODO explain how INET supports queueing packet data arriving in order
 
 \cppsnippet{PacketQueueingExample}{Packet queueing example}
 
 
 \subsection{Buffering Packets}
 
-explain how INET supports buffering packet data arriving out of order
+%TODO explain how INET supports buffering packet data arriving out of order
 
 \subsection{Reassembling Packets}
 
-explain how INET merges packet data arriving out of order into a whole
+%TODO explain how INET merges packet data arriving out of order into a whole
 
 \cppsnippet{PacketReassemblingExample}{Packet reassembling example}
 
 \subsection{Reordering Packets}
 
-explain how INET forms a stream from packet data arriving out of order
+%TODO explain how INET forms a stream from packet data arriving out of order
 
 \cppsnippet{PacketReorderingExample}{Packet reordering example}
 
 \subsection{Dispatching Packets}
 
-explain how INET allows connecting multiple protocols within a network node in a very flexible way
+%TODO explain how INET allows connecting multiple protocols within a network node in a very flexible way
 
 \cppsnippet{PacketDispatchingExample}{Packet dispatching example}
 
