--- a/doc/src/developers-guide/ch-packets.tex
+++ b/doc/src/developers-guide/ch-packets.tex
@@ -177,8 +177,7 @@ unambigously identified just by looking at the raw data.
 
 \section{Tagging Data Regions}
 
-explain how INET packet representation allows tagging arbitrary regions of
-packets with meta information
+%TODO explain how INET packet representation allows tagging arbitrary regions of packets with meta information
 
 \cppsnippet{RegionTaggingExample}{Region tagging example}
 
