--- a/doc/src/users-guide/inet-users-guide.tex
+++ b/doc/src/users-guide/inet-users-guide.tex
@@ -102,7 +102,7 @@
   \usepackage[plainpages=false,linktocpage,bookmarksnumbered=true,pdftex]{hyperref}   %% automatic hyperlinking
   \pdfcompresslevel=9
   \pdfinfo{/Author (Andras Varga and others)
-    /Title (INET Framework Users Guide)
+    /Title (INET Framework User's Guide)
     /Subject ()
     /Keywords (INET, INETMANET, OMNeT++, manual)}
 \else
@@ -146,7 +146,7 @@
 \fancyhf{}
 \renewcommand{\footrulewidth}{0.5pt}
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
-\lhead{INET Framework Users Guide -- \leftmark}
+\lhead{INET Framework User's Guide -- \leftmark}
 \rfoot{\thepage}
 
 %% this is used for chapter start pages
