--- a/doc/src/developers-guide/inet-developers-guide.tex
+++ b/doc/src/developers-guide/inet-developers-guide.tex
@@ -485,6 +485,9 @@
 \include{ch-apps}
 \cleardoublepage
 
+\include{ch-authors-guide}
+\cleardoublepage
+
 \bibliographystyle{alpha}
 \bibliography{inet-developers-guide}
 
