--- a/doc/src/developers-guide/ch-authors-guide.tex
+++ b/doc/src/developers-guide/ch-authors-guide.tex
@@ -66,12 +66,12 @@ documentation.
 
 \subsection{What then?}
 
-Concentrate on giving a ``big picture'' of the implementation: what it
-is generally capable of, how the parts fit together, how to user the
-provided APIs, what were the main design decisions, etc. Give just
-enough information that after a quick read, users can ``bootstrap''
-into implementing their own protocols and applications. If they have
-questions afterwards, they will/should refer to the C++ documentation.
+Concentrate on giving a ``big picture'' of the implementation: what it is
+generally capable of, how the parts fit together, how to use the provided APIs,
+what were the main design decisions, etc. Give simple yet meaningful examples
+and just enough information about the API that after a quick read, users can
+``bootstrap'' into implementing their own protocols and applications. If they
+have questions afterwards, they will/should refer to the C++ documentation.
 
 
 %%% Local Variables:
