--- a/doc/src/developers-guide/ch-introduction.tex
+++ b/doc/src/developers-guide/ch-introduction.tex
@@ -14,7 +14,7 @@ mobile simulations as well.
 
 \section{Scope of this Manual}
 
-This manual is written for users of INET who intend to extend INET with new 
+This manual is written for developers who intend to extend INET with new
 components, written in C++. This manual is accompanied by the INET Reference,
 which is generated from NED and MSG files using OMNeT++'s documentation generator, 
 and the documentation of the underlying C++ classes, generated from the source files 
